# alarm-clock

alarmclock/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
alarmclock/docs/: architecture.md  library.md  usage.md
alarmclock/examples/: embed_typer.py
alarmclock/src/alarmclock/: __init__.py  api.py  daemon.py  exceptions.py  launchd.py  models.py  notify.py  parser.py  reload.py  scheduler.py  sounds.py  store.py  tzutil.py
alarmclock/src/alarmclock/cli/: __init__.py  console.py  main.py
alarmclock/tests/: test_api_service.py  test_daemon_singleton.py  test_parser.py  test_public_api.py  test_reload.py  test_scheduler.py  test_sounds.py  test_store.py
